[143][ntp-composebox] Ensure tab chip text is visible for high-contrast
https://screenshot.googleplex.com/9smomLioxay8CjP

(cherry picked from commit 8f0d85bcffef78a2dd1888c7fa65b802a68839af)

Bug: 461490811
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7157582
Commit-Queue: Hannah Collins <hannahrogers@google.com>
Auto-Submit: Hannah Collins <hannahrogers@google.com>
Commit-Queue: Riley Tatum <rtatum@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1545339}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7167946
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7499@{#2255}
Cr-Branched-From: b30439823e5177773584139e72e0593e36863899-refs/heads/main@{#1536371}

--- a/ui/webui/resources/cr_components/composebox/recent_tab_chip.css
+++ b/ui/webui/resources/cr_components/composebox/recent_tab_chip.css
@@ -31,6 +31,12 @@
       var(--color-composebox-context-entrypoint-hover-background);
 }
 
+@media (forced-colors: active) {
+  #recentTabButton {
+    --cr-button-text-color: Highlight;
+  }
+}
+
 .favicon {
   border-radius: 100px;
   height: 16px;
